syntax = "proto3";

message LocationMessage {
    int64 id = 1;
    int64 person_id = 2;
    string latitude = 3;
    string longitude = 4;
    string creation_time = 5;
}

service LocationService {
    rpc Create(LocationMessage) returns (LocationMessage);
}
